@@ -11,6 +11,7 @@ version = "1.0.0"
 
 var theJvmArgs = listOf(
     "--enable-preview",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
     "--add-opens=java.base/java.util.regex=ALL-UNNAMED",
     "--add-opens=java.base/java.lang=ALL-UNNAMED",
     "--add-opens=java.base/java.time=ALL-UNNAMED",
